// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`picker create 1`] = `
<div>
  <div class="weui-mask"></div>
  <div class="weui-picker">
    <div class="weui-picker__hd">
      <div class="weui-picker__action">取消</div>
      <div class="weui-picker__action">确定</div>
    </div>
    <div class="weui-picker__bd" style="height: 238px;"></div>
  </div>
</div>
`;

exports[`picker create a multi-column picker 1`] = `
<div>
  <div class="weui-mask"></div>
  <div class="weui-picker">
    <div class="weui-picker__hd">
      <div class="weui-picker__action">取消</div>
      <div class="weui-picker__action">确定</div>
    </div>
    <div class="weui-picker__bd" style="height: 238px;">
      <div class="weui-picker__group">
        <div class="weui-picker__mask" style="background-size: 100% 102px;"></div>
        <div class="weui-picker__indicator" style="top: 102px;"></div>
        <div class="weui-picker__content" style="transform: translate3d(0, 102px, 0);">
          <div class="weui-picker__item">1</div>
          <div class="weui-picker__item">2</div>
          <div class="weui-picker__item">3</div>
        </div>
      </div>
      <div class="weui-picker__group">
        <div class="weui-picker__mask" style="background-size: 100% 102px;"></div>
        <div class="weui-picker__indicator" style="top: 102px;"></div>
        <div class="weui-picker__content" style="transform: translate3d(0, 102px, 0);">
          <div class="weui-picker__item">yes</div>
          <div class="weui-picker__item">no</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`picker create a single-column picker 1`] = `
<div>
  <div class="weui-mask"></div>
  <div class="weui-picker">
    <div class="weui-picker__hd">
      <div class="weui-picker__action">取消</div>
      <div class="weui-picker__action">确定</div>
    </div>
    <div class="weui-picker__bd" style="height: 238px;">
      <div class="weui-picker__group">
        <div class="weui-picker__mask" style="background-size: 100% 102px;"></div>
        <div class="weui-picker__indicator" style="top: 102px;"></div>
        <div class="weui-picker__content" style="transform: translate3d(0, 102px, 0);">
          <div class="weui-picker__item">1</div>
          <div class="weui-picker__item">2</div>
          <div class="weui-picker__item">3</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
